# ibf

./: .env.example  .env.example copy  .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  instructions.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-macos-app.yml  release-macos-arm64.yml
config/: sample-config.json
config_examples/: config--example-cmo.toml  config-cmo-detailed.toml  config-cmo.toml  config-example-snow.toml  config-example.toml  sample-config-ensemble.toml  sample-config-otaki.toml
docs/: ARCHITECTURE.md
examples/: config-CMO.json  sample-config.json  sample-config.json.bak  sample-config.toml
ibf/: .env.example copy  .gitignore  README.md  pyproject.toml
ibf-wizard/: README.md  pyproject.toml
ibf-wizard/src/ibf_wizard/: __init__.py  app.py  cli.py  config_form.py
ibf/config/: sample-config.json
ibf/docs/: ARCHITECTURE.md  PIPELINE_MIGRATION.md
ibf/examples/: sample-config.json  sample-config.json.bak
ibf/src/ibf/: __main__.py  cli.py
ibf/tests/: test_cli_pipeline.py  test_translation_helpers.py
originalcode/webforecasts/: Config as of 30 Oct 2025 before switch to Caribbean.json  config.json  instructions.txt  make_forecasts.py  make_forecasts.sh  mapAreas.py  requirements_maps.txt  setup.py
originalcode/webforecasts/deprecated just in case/: config copy.json  config new.json  config old.json  config save.json  config test.json  (+5 more)
packaging/: ibf_entrypoint.py
src/ibf/: __init__.py  cli.py
tests/: conftest.py  test_cli_pipeline.py  test_config_validation.py  test_costs_override.py  test_dotenv_precedence.py  test_forecast_days.py  test_formatter_units.py  test_geocode_fallback.py  test_recent_overwrite.py  test_scaffold.py  test_snow_levels.py  test_translation_helpers.py  test_units_parsing.py
(+58 files in other folders)
